cmake_minimum_required(VERSION 3.24)
project(CompSciAssgn3)

set(CMAKE_CXX_STANDARD 23)

add_executable(CompSciAssign3part1 part1.cpp)
add_executable(CompSciAssign3part2 part2.cpp)
add_executable(CompSciAssign3part3 part3.cpp)
add_executable(CompSciAssign3part4 part4.cpp)
add_executable(CompSciAssign3part5 part5.cpp)
add_executable(CompSciAssign3part6 part6.cpp)
